code to make lastStickerPosition work, but it doesn't work well so gonna switch to simple fixed grid for shift key

--- a/jupytergraffiti/css/graffiti.css
+++ b/jupytergraffiti/css/graffiti.css
@@ -570,7 +570,7 @@ http://www.patternify.com/
 
 #graffiti-saving-scrim div {
   border-radius:10px;
-  padding:50px 15px 50px 15px;
+  padding:40px 15px 40px 15px;
   color:black;
   opacity:1.0 !important;
   background-color:white;
